k8s/app-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: karan-devops-dashboard

  namespace: karan-dashboard

spec:

  replicas: 2

  strategy:

    type: RollingUpdate

    rollingUpdate:

      maxUnavailable: 0

      maxSurge: 1

  selector:

    matchLabels:

      app: karan-devops-dashboard

  template:

    metadata:

      labels:

        app: karan-devops-dashboard

    spec:

      containers:

        - name: app

          image: IMAGE_REPOSITORY_PLACEHOLDER:IMAGE_TAG_PLACEHOLDER

          imagePullPolicy: Always

          ports:

            - containerPort: 5000

              protocol: TCP

          readinessProbe:

            httpGet:

              path: /health

              port: 5000

            initialDelaySeconds: 10

            periodSeconds: 10

            timeoutSeconds: 5

            failureThreshold: 6

          livenessProbe:

            httpGet:

              path: /health

              port: 5000

            initialDelaySeconds: 30

            periodSeconds: 20

            timeoutSeconds: 5

            failureThreshold: 3

          resources:

            requests:

              cpu: 100m

              memory: 128Mi

            limits:

              cpu: 500m

              memory: 512Mi
