k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karan-trailquest-service
  namespace: karan-trailquest
spec:
  type: ClusterIP
  selector:
    app: karan-trailquest
  ports:
    - name: http
      port: 80
      targetPort: http
