k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karan-trailquest-ingress
  namespace: karan-trailquest
spec:
  ingressClassName: nginx
  rules:
    - host: trailquest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karan-trailquest-service
                port:
                  number: 80
